# yt-dlp-get-pot

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: getpot_example.py
tests/: test_provider.py
yt_dlp_plugins/extractor/: getpot.py  getpot_client.py
