[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-get-pot"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.8"
license = "Unlicense"
keywords = ["yt-dlp", "yt-dlp-plugin"]
authors = [
  { name = "coletdjnz", email = "coletdjnz@protonmail.com" },
]
dependencies = ["yt_dlp@https://github.com/seproDev/yt-dlp/archive/refs/heads/pass_po_token.zip"]

[tool.hatch.env.default]
installer = "uv"
path = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]

[tool.hatch.metadata]
allow-direct-references = true