[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-get-pot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE"}
keywords = ["yt-dlp", "yt-dlp-plugin", "yt-dlp-plugins-get-pot"]
authors = [
  { name = "coletdjnz", email = "coletdjnz@protonmail.com" },
]
dependencies = []

[tool.hatch.env.default]
installer = "uv"
path = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]

[tool.hatch.metadata]
allow-direct-references = true